--- a/.github/workflows/reusable-terraform-deploy.yaml
+++ b/.github/workflows/reusable-terraform-deploy.yaml
@@ -9,6 +9,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./terraform
 
     steps:
     - name: Checkout code
@@ -29,8 +32,8 @@ jobs:
 
     - name: Initialize Terraform
       run: terraform init
-      working-directory: ./terraform
+      # working-directory: ./terraform
   
     - name: Plan Terraform
       run: terraform plan
-      working-directory: ./terraform
+      # working-directory: ./terraform
