--- a/.github/workflows/caller-workflow.yaml
+++ b/.github/workflows/caller-workflow.yaml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   call-workflow:
-    uses: ./.github/workflows/reusable-terraform-deploy.yaml
+    uses: ./.github/workflows/reusable-terraform-deploy.yaml@main
+    with:
+      working_directory: 'specific/terraform/directory'
     secrets: inherit
 
