--- a/.github/workflows/caller-workflow.yaml
+++ b/.github/workflows/caller-workflow.yaml
@@ -10,5 +10,7 @@ jobs:
     uses: ./.github/workflows/reusable-terraform-deploy.yaml
     with:
       working_directory: './terraform'
+      aws_region: 'eu-west-2'
     secrets: inherit
+
 
