--- a/.github/workflows/reusable-terraform-deploy.yaml
+++ b/.github/workflows/reusable-terraform-deploy.yaml
@@ -1,21 +1,14 @@
-name: Reusable Terraform Workflow
+name: Reusable workflow example
 
 on:
   workflow_call:
-    inputs:
-      working_directory:
-        required: true
-        type: string
-      aws_region:
-        required: true
-        type: string
+    secrets:
+      token:
+        required: false
 
 jobs:
-  terraform:
+  deploy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ${{ github.workspace }}/${{ inputs.working_directory }}
 
     steps:
     - name: Checkout code
@@ -26,12 +19,84 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ inputs.aws_region }}
+        aws-region: eu-west-2
+
+    - name: Install Terraform
+      run: |
+        curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+        sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+        sudo apt-get update && sudo apt-get install terraform
 
     - name: Initialize Terraform
       run: terraform init
-
+      working-directory: ./terraform
+  
     - name: Plan Terraform
       run: terraform plan
+      working-directory: ./terraform
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
+
 
 
