--- a/.github/workflows/caller-workflow.yaml
+++ b/.github/workflows/caller-workflow.yaml
@@ -8,6 +8,11 @@ on:
 jobs:
   call-workflow:
     uses: ./.github/workflows/reusable-terraform-deploy.yaml
+    with:
+      working_directory: './terraform'
+      aws_region: 'eu-west-2'
     secrets: inherit
+
+
 
 
