--- a/.github/workflows/reusable-terraform-deploy.yaml
+++ b/.github/workflows/reusable-terraform-deploy.yaml
@@ -1,14 +1,21 @@
-name: Reusable workflow example
+name: Reusable Terraform Workflow
 
 on:
   workflow_call:
-    secrets:
-      token:
-        required: false
+    inputs:
+      working_directory:
+        required: true
+        type: string
+      aws_region:
+        required: true
+        type: string
 
 jobs:
-  deploy:
+  terraform:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}/${{ inputs.working_directory }}
 
     steps:
     - name: Checkout code
@@ -19,21 +26,15 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-west-2
-
-    - name: Install Terraform
-      run: |
-        curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
-        sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-        sudo apt-get update && sudo apt-get install terraform
+        aws-region: ${{ inputs.aws_region }}
 
     - name: Initialize Terraform
       run: terraform init
-      working-directory: ./terraform
-  
+
     - name: Plan Terraform
       run: terraform plan
-      working-directory: ./terraform
+
+
 
 
 
